whitespace fixes

--- a/app/assets/stylesheets/html_file.css.scss
+++ b/app/assets/stylesheets/html_file.css.scss
@@ -16,7 +16,7 @@ background-color:#fadafa;
 }
 p { text-align:right; direction:rtl; padding: 5px 0; }
 h1 { text-align:right; direction:rtl; }
-h2 { text-align:right; direction:rtl; }
+h2 { text-align:center; direction:rtl; }
 h3 { text-align:right; direction:rtl; }
 pre { text-align:right; direction:rtl; font-family:David, David CLM; font-size:14pt; }
 code { text-align:right; direction:rtl; font-family:David, David CLM; font-size:14pt; }
